pom edited okay